[workspace]
resolver = "3"
members = [
    "accordion-rs",
    "alert-rs",
    "browser-rs",
    "eld",
    "hero",
    "i18n-rs",
    "image-rs",
    "input-rs",
    "navbar",
    "radio-rs",
    "scroll-rs",
    "select-rs",
    "sidebar",
    "skeleton-rs",
    "slider-rs",
    "table-rs",
    "theme-rs",
]

[workspace.package]
version = "0.0.2"
name = "kit"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
edition = "2024"
description = "Top level crate for the opensass kit repository."
license = "MIT"
repository = "https://github.com/opensass/kit"
homepage = "https://opensass.org/kit"
documentation = "https://opensass.org/kit"
keywords = ["ui", "gui", "yew", "dioxus", "leptos"]
rust-version = "1.80.0"
publish = false
